--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
- (public_name markdown_parser)
+ (public_name markdown_parser_extractor)
  (libraries core)
  (preprocess (pps ppx_jane)))
