--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,5 @@
 (library
  (public_name markdown_parser_extractor)
  (libraries core)
- (preprocess (pps ppx_jane)))
+ (inline_tests)
+ (preprocess (pps ppx_jane ppx_inline_test)))
