--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,6 @@
 (library
  (public_name markdown_parser_extractor)
  (libraries core)
+ (modules        (:standard))
  (inline_tests)
  (preprocess (pps ppx_jane ppx_inline_test)))
